--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -76,26 +76,7 @@
     </div>
     <!--End Slider Bootstrap-->
 
-    <!--View List-->
-    <div class="col-sm-9" style="background: red; height:300px">
-        <div class="row">
-            <div class="col-xs-6 col-md-3">
-                <a href="#" class="thumbnail">
-                    <img src="~/Images/1.jpg" />
-                </a>
-            </div>
-            ...
-        </div>
-    </div>
-    <!--End View List-->
-
-    <!--Filter-->
-    <div class="col-sm-3" style="background: green; height:300px">
-
-    </div>
-    <!--End Filter-->
-
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
         <footer>
