--- a/PPCRental_Project/PPCRental_Project/Content/Site.css
+++ b/PPCRental_Project/PPCRental_Project/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: 'Lora', serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -47,6 +48,24 @@ input[type="checkbox"].input-validation-error {
 {
   
 }
+#btnfilter
+{
+    width: 100%;
+}
+#detail-header
+{
+    text-align: center;
+    font-family: 'Lora', serif;
+    font-size: 30px;
+}
+#project-description
+{
+    height: 331px;
+}
+#viewandfilter
+{
+    margin-top:15px;
+}
 
 .caret_center
 {
@@ -56,3 +75,13 @@ input[type="checkbox"].input-validation-error {
 {
     margin-bottom: 10px;
 }
+.projectcomponent
+{
+    height: 400px;
+    margin-bottom: 10px;
+}
+.img-decorate
+{
+     box-shadow: 5px 5px 5px #888888;
+}
+
