--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -1,95 +1,156 @@
-﻿@{
+﻿@model IEnumerable<PPCRental_Project.Models.PROPERTY>
+
+@{
     ViewBag.Title = "Home Page";
 }
-<!--View List-->
-<div class="col-sm-9" style="background: red; height:300px">
-    <div class="row">
-        <div class="col-xs-6 col-md-3">
-            <a href="#" class="thumbnail">
-                <img src="~/Images/1.jpg" />
-            </a>
+
+ <!--Slider Bootstrap-->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img class="img-rounded img-responsive" src="~/Images/1.jpg" />
+            <div class="carousel-caption">
+                ...
+            </div>
         </div>
-        ...
+        <div class="item">
+            <img class="img-rounded img-responsive" src="~/Images/2.jpg" />
+            <div class="carousel-caption">
+                ...
+            </div>
+        </div>
+        <div class="item">
+            <img class="img-rounded img-responsive" src="~/Images/3.jpg" />
+            <div class="carousel-caption">
+                ...
+            </div>
+        </div>
     </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
-<!--End View List-->
-<!--Filter-->
-<div class="col-sm-3">
-    <!--Filter Header-->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3>Filter</h3>
+<!--End Slider Bootstrap-->
+
+<div class="container" id="viewandfilter">
+    <!--View List-->
+    <div class="col-sm-9">
+        <div class="row">
+            @{
+                foreach (var item in Model)
+                {
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail projectcomponent">
+                            <img class="img-rounded img-responsive" src="~/Images/@item.Avatar" alt="@item.PropertyName">
+                            <div class="caption">
+                                <h3>@item.PropertyName</h3>
+                                <p>Giá: @item.Price @item.UnitPrice</p>
+                                <p>Quận: @item.DISTRICT.DistrictName</p>
+                                <p><a href="~/Detail/Detail/@item.ID" class="btn btn-primary" role="button">Xem chi tiết</a></p>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
         </div>
-    <!--End Filter Header-->
+    </div>
+    <!--End View List-->
 
-        <!--Filter Boby-->
-        <div class="panel-body">
-            <!--District Filter-->
-            <div class="dropdown col-md-12 component_filter" id="district_filter">
-                <div class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
-                    Quận
-                    <span class="caret pull-right caret_center"></span>
-                </div>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Quận 2</a></li>
-                    <li><a href="#">Quận 3</a></li>
-                    <li><a href="#">Quận 4</a></li>
-                </ul>
+    <!--Filter-->
+    <div class="col-sm-3" >
+        <!--Filter Header-->
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3>Filter</h3>
             </div>
-            <!--End District Filter-->
-
-            <!--Ward Filter-->
-            <div class="dropdown col-md-12 component_filter" id="ward_filter">
-
-                <div id="filterquan" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
-                    Phường
-                    <span class="caret pull-right caret_center"></span>
+            <!--End Filter Header-->
+            <!--Filter Boby-->
+            <div class="panel-body">
+                <!--District Filter-->
+                <div class="dropdown col-md-12 component_filter" id="district_filter">
+                    <div class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
+                        Quận
+                        <span class="caret pull-right caret_center"></span>
+                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Quận 2</a></li>
+                        <li><a href="#">Quận 3</a></li>
+                        <li><a href="#">Quận 4</a></li>
+                    </ul>
                 </div>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Binh Hung Hoa</a></li>
-                    <li><a href="#">Phu Thanh</a></li>
-                    <li><a href="#">Tan Son Nhi</a></li>
-                </ul>
-            </div>
-            <!--End Ward Filter-->
+                <!--End District Filter-->
 
-            <!--Street Filter-->
-            <div class="dropdown col-md-12 component_filter" id="street_filter">
+                <!--Ward Filter-->
+                <div class="dropdown col-md-12 component_filter" id="ward_filter">
 
-                <div id="filterquan" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
-                    Đường
-                    <span class="caret pull-right caret_center"></span>
+                    <div id="filterquan" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
+                        Phường
+                        <span class="caret pull-right caret_center"></span>
+                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Binh Hung Hoa</a></li>
+                        <li><a href="#">Phu Thanh</a></li>
+                        <li><a href="#">Tan Son Nhi</a></li>
+                    </ul>
                 </div>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Trần Hưng Đạo</a></li>
-                    <li><a href="#">Lương Nhữ Học</a></li>
-                    <li><a href="#">Hồng Bàng</a></li>
-                </ul>
-            </div>
-            <!--End Street Filter-->
+                <!--End Ward Filter-->
 
-            <!--Type Filter-->
-            <div class="dropdown col-md-12 component_filter" id="type_filter">
+                <!--Street Filter-->
+                <div class="dropdown col-md-12 component_filter" id="street_filter">
 
-                <div id="filterquan" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
-                    Loại bất động sản
-                    <span class="caret pull-right caret_center"></span>
+                    <div id="filterquan" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
+                        Đường
+                        <span class="caret pull-right caret_center"></span>
+                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Trần Hưng Đạo</a></li>
+                        <li><a href="#">Lương Nhữ Học</a></li>
+                        <li><a href="#">Hồng Bàng</a></li>
+                    </ul>
                 </div>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Trần Hưng Đạo</a></li>
-                    <li><a href="#">Lương Nhữ Học</a></li>
-                    <li><a href="#">Hồng Bàng</a></li>
-                </ul>
-            </div>
-            <!--End Type Filter-->
+                <!--End Street Filter-->
+                <!--Type Filter-->
+                <div class="dropdown col-md-12 component_filter" id="type_filter">
 
-           
+                    <div id="filterquan" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
+                        Loại bất động sản
+                        <span class="caret pull-right caret_center"></span>
+                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Trần Hưng Đạo</a></li>
+                        <li><a href="#">Lương Nhữ Học</a></li>
+                        <li><a href="#">Hồng Bàng</a></li>
+                    </ul>
+                </div>
+                <!--End Type Filter-->
+
+
+                <div>
+                    <button class="btn btn-primary" id="btnfilter"> Filter</button>
+                </div>
+
+
+            </div>
+            <!--End Filter Boby-->
 
         </div>
-        <!--End Filter Boby-->
+        <!--End Filter Quan-->
 
     </div>
-    <!--End Filter Quan-->
-
+    <!--End Filter-->
 </div>
-<!--End Filter-->
