add animate and update css

--- a/PPCRental_Project/PPCRental_Project/Content/Site.css
+++ b/PPCRental_Project/PPCRental_Project/Content/Site.css
@@ -1,7 +1,6 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    font-family: 'Lora', serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -10,13 +9,23 @@
     padding-right: 15px;
 }
 
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
     max-width: 280px;
 }
-
+select
+{
+    margin-top:20px;
+}
 /* styles for validation helpers */
 .field-validation-error {
     color: #b94a48;
@@ -77,11 +86,19 @@ input[type="checkbox"].input-validation-error {
 }
 .projectcomponent
 {
-    height: 400px;
+    height: 450px;
     margin-bottom: 10px;
 }
+
+.projectcomponent1
+{
+    height: 500px;
+    margin-bottom: 10px;
+}
+
 .img-decorate
 {
      box-shadow: 5px 5px 5px #888888;
+     margin: 0 auto;
 }
 
