--- a/PPCRental_Project/PPCRental_Project/Views/Project/Search.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Project/Search.cshtml
@@ -63,7 +63,7 @@
                         <p>Mô tả: @item.Content.Substring(0, 50)...</p>
                         <p>Giá: @item.Price @item.UnitPrice</p>
                         <p>Địa chỉ: @item.STREET.StreetName, @item.WARD.WardName, @item.DISTRICT.DistrictName</p>
-                        <p><a href="~/Product/Detail/@item.ID" class="btn btn-primary" role="button">Xem chi tiết</a></p>
+                        <p><a href="~/Project/Detail/@item.ID" class="btn btn-primary" role="button">Xem chi tiết</a></p>
                     </div>
                 </div>
             </div>
