--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -30,7 +30,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-img" href="#">
+                    <img src="~/Images/PPCRentalLogo.png" style="height:50px; width:150px" />
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
