--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
@@ -19,75 +19,42 @@
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
+                        
                         <th>PropertyName</th>
                         <th>Avatar</th>
-                        <th>Images</th>
-                        <th>Content</th>
-                        <th>Price</th>
-                        <th>UnitPrice</th>
                         <th>Area</th>
                         <th>BedRoom</th>
                         <th>BathRoom</th>
                         <th>PackingPlace</th>
-                        <th>Created_at</th>
-                        <th>Create_post</th>
-                        <th>Note</th>
-                        <th>Updated_at</th>
                         <th>DistrictName</th>
-                        <th>Status_Name</th>
-                        <th>CodeType</th>
                         <th>StreetName</th>
-                        <th>Email</th>
-                        
-                        
+                        <th>WardName</th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr>
+                        
                         <th>PropertyName</th>
                         <th>Avatar</th>
-                        <th>Images</th>
-                        <th>Content</th>
-                        <th>Price</th>
-                        <th>UnitPrice</th>
                         <th>Area</th>
                         <th>BedRoom</th>
                         <th>BathRoom</th>
                         <th>PackingPlace</th>
-                        <th>Created_at</th>
-                        <th>Create_post</th>
-                        <th>Note</th>
-                        <th>Updated_at</th>
                         <th>DistrictName</th>
-                        <th>Status_Name</th>
-                        <th>CodeType</th>
                         <th>StreetName</th>
-                        <th>Email</th>
-                       
-                        
+                        <th>WardName</th>
                     </tr>
                 </tfoot>
                 <tbody>
                     @foreach (var item in Model)
                     {
                         <tr>
+                            
                             <td>
                                 @Html.DisplayFor(modelItem => item.PropertyName)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Avatar)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Images)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Content)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Price)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.UnitPrice)
+                                <img src="~/Images/@item.Avatar" width="100px"/>
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Area)
@@ -102,41 +69,20 @@
                                 @Html.DisplayFor(modelItem => item.PackingPlace)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Created_at)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Create_post)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Note)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Updated_at)
-                            </td>
-                            <td>
                                 @Html.DisplayFor(modelItem => item.DISTRICT.DistrictName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PROJECT_STATUS.Status_Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PROPERTY_TYPE.CodeType)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.STREET.StreetName)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.USER.Email)
-                            </td>
-                            <td>
                                 @Html.DisplayFor(modelItem => item.WARD.WardName)
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                                @Html.ActionLink("Edit", "Edit", new { id = item.ID })
+                                @Html.ActionLink("Details", "Details", new { id = item.ID })
                                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
                             </td>
-                        </tr>
+                      </tr>
                     }
 
 
