--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -1,13 +1,16 @@
 ﻿@model PPCRental_Project.Models.PROPERTY
 
+
+
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Edit</h2>
-
-
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+<link href="~/Content/Site.css" rel="stylesheet" />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -17,38 +20,15 @@
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.ID)
-
         <div class="form-group">
             @Html.LabelFor(model => model.PropertyName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-
                 @Html.EditorFor(model => model.PropertyName)
                 @Html.ValidationMessageFor(model => model.PropertyName)
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <img src="~/Images/@Model.Avatar" width="200" /> <br><br>
-                <div>
-                    @using (Html.BeginForm("FileUpload", "PropertyAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                    {
-                        <label for="file">Upload Image:</label>
-                        <input type="file" name="file" id="file" style="width: 100%;" />
-                        <input type="submit" value="Upload" class="submit" />
-                    }
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Images)
-                @Html.ValidationMessageFor(model => model.Images)
-            </div>
-        </div>
+       
 
         <div class="form-group">
             @Html.LabelFor(model => model.PropertyType_ID, "PropertyType_ID", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -186,7 +166,28 @@
                 @Html.ValidationMessageFor(model => model.Updated_at)
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <img src="~/Images/@Model.Avatar" width="200" /> <br><br>
+                <div>
+                    @using (Html.BeginForm("FileUpload", "PropertyAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        <label for="file">Upload Image:</label>
+                        <input type="file" name="file" id="file" style="width: 100%;" />
+                        <input type="submit" value="Upload" class="submit" />
+                    }
+                </div>
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Images)
+                @Html.ValidationMessageFor(model => model.Images)
+            </div>
+        </div>
 
 
         <div class="form-group">
