--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>ViewBag.title - Admin page</title>
-
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
     <!-- Bootstrap core CSS-->
     <link href="/Assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom fonts for this template-->
@@ -245,7 +246,7 @@
         <footer class="sticky-footer">
             <div class="container">
                 <div class="text-center">
-                    <small>Copyright © Your Website 2017</small>
+                    <small></small>
                 </div>
             </div>
         </footer>
