--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
@@ -19,7 +19,7 @@
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        
+
                         <th>PropertyName</th>
                         <th>Avatar</th>
                         <th>Area</th>
@@ -33,7 +33,7 @@
                 </thead>
                 <tfoot>
                     <tr>
-                        
+
                         <th>PropertyName</th>
                         <th>Avatar</th>
                         <th>Area</th>
@@ -48,42 +48,92 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
-                        <tr>
-                            
+
+
+                        <tr class="odd gradeX">
+
+                            <td>@item.PropertyName</td>
+                            @*<td><img src="/Images/@item.Images" width="100px"></td>*@
+
+                            @{
+
+                                try
+                                {//
+
+                                    <td><img src="@Url.Content(item.Avatar)" width="100px"></td>
+                                    //    <td><img src="/Images/@item.Avatar"  width="100px"></td>
+
+
+                                }
+                                catch (Exception)
+                                {
+
+                                }
+                            }
+
+
+
+                            <td>@item.Area</td>
+                            <td>@item.BedRoom</td>
+                            <td>@item.BathRoom</td>
+                            <td>@item.PackingPlace</td>
+                            <td>@item.DISTRICT.DistrictName</td>
+                            <td>@item.STREET.StreetName</td>
+                            <td>@item.WARD.WardName</td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.PropertyName)
-                            </td>
-                            <td>
-                                <img src="~/Images/@item.Avatar" width="100px"/>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Area)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.BedRoom)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.BathRoom)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PackingPlace)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DISTRICT.DistrictName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.STREET.StreetName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.WARD.WardName)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.ID })
-                                @Html.ActionLink("Details", "Details", new { id = item.ID })
+
+                                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
                                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+
                             </td>
-                      </tr>
-                    }
+
+                        </tr>
+                                }
+                    @*foreach (var item in Model)
+                        {
+                            <tr>
+
+                                <td>
+                                    @item.PropertyName
+                                    @Html.DisplayFor(modelItem => item.PropertyName)
+                                </td>
+
+                                <td>
+                                <img src="@Url.Content(item.Images)" width="100px">
+                                </td>
+                                    @*<img src="~/Images/@item.Avatar" width="100px"/>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Area)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.BedRoom)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.BathRoom)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.PackingPlace)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DISTRICT.DistrictName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.STREET.StreetName)
+                                </td>
+                                <td>
+                                    Html.DisplayFor(modelItem => item.WARD.WardName)
+                                </td>
+                                <td>
+                                    Html.ActionLink("Edit", "Edit", new { id = item.ID })
+                                    Html.ActionLink("Details", "Details", new { id = item.ID })
+                                    Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                                </td>
+                          </tr>
+                        }*@
 
 
                 </tbody>
@@ -92,4 +142,3 @@
     </div>
     <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 </div>
-       
