--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -11,7 +11,7 @@
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <link href="~/Content/Site.css" rel="stylesheet" />
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "PropertyAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-       
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.PropertyType_ID, "PropertyType", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -169,25 +169,25 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <img src="~/Images/@Model.Avatar" width="200" /> <br><br>
+                @*<img src="~/Images/@Model.Avatar" width="200" /> <br><br>*@
                 <div>
                     @using (Html.BeginForm("FileUpload", "PropertyAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
-                        <label for="file">Upload Image:</label>
-                        <input type="file" name="file" id="file" style="width: 100%;" />
-                        <input type="submit" value="Upload" class="submit" />
+                        <input type="file" name="ImageFile" />
+                        @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
                     }
                 </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Images)
-                @Html.ValidationMessageFor(model => model.Images)
-            </div>
-        </div>
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Images)
+                    @Html.ValidationMessageFor(model => model.Images)
+                </div>
+            </div>*@
 
 
         <div class="form-group">
