--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                 {
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail projectcomponent">
-                            <img class="img-rounded img-responsive display-img" src="~/Images/@item.Avatar" alt="@item.PropertyName">
+                            <img class="img-rounded img-responsive display-img"  src="@Url.Content(item.Avatar)" alt="@item.PropertyName">
                             <div class="caption">
                                 <!--Boundary of project title-->
                                 <div class="thumbnail-title">
